--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -18,6 +18,10 @@ body {
   box-sizing: border-box;
 }
 
+code {
+  font-family: "IBM Plex Mono", monospace;
+}
+
 
 :not(pre) > code {
   background-color: #333;
