--- a/src/components/Base.module.scss
+++ b/src/components/Base.module.scss
@@ -12,7 +12,7 @@
   }
 
   footer {
-    color: var(--secondary-text);
+    color: var(--text-secondary);
     margin-top: 4rem;
     font-size: 12px;
     font-weight: 500;
