--- a/src/components/PostList.module.scss
+++ b/src/components/PostList.module.scss
@@ -6,7 +6,7 @@
     list-style-type: none;
 
     time {
-      color: var(--secondary-text);
+      color: var(--text-secondary);
       margin-right: 2em;
     }
   }
