--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -1,22 +1,18 @@
 .base {
   max-width: 46rem;
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 0 var(--page-gutter);
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 
-  header {
-    margin-top: 4rem;
-    margin-bottom: 1rem;
-  }
-
   footer {
     color: var(--text-secondary);
-    margin-top: 4rem;
-    font-size: 12px;
-    font-weight: 500;
-    margin-bottom: 1.5rem;
-    margin-top: auto;
+    margin-top: 32px;
+    font-size: 11px;
+    font-weight: 700;
+    margin-bottom: 24px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
   }
 }
