--- a/src/components/PostList.module.scss
+++ b/src/components/PostList.module.scss
@@ -1,13 +1,17 @@
 .list {
   padding: 0;
-  margin: 0;
+  margin: 48px 0;
+  padding-left: 16px;
 
   li {
     list-style-type: none;
+    margin-bottom: 8px;
 
-    time {
+    &::before {
+      content: "–";
+      margin-left: -15px;
+      position: absolute;
       color: var(--text-secondary);
-      margin-right: 2em;
     }
   }
 }
