--- a/src/components/Prose.module.scss
+++ b/src/components/Prose.module.scss
@@ -2,14 +2,14 @@
   line-height: 1.75;
 
   p {
-    margin: 1.5rem 0;
+    margin-block: 0 24px;
   }
 
   h2 {
     font-size: 1.5rem;
     font-weight: 700;
     letter-spacing: -0.022em;
-    margin: 2rem 0;
+    margin-block: 24px 0;
   }
 
   a {
@@ -26,6 +26,7 @@
   }
 
   img {
-    border-radius: 0.5rem;
+    border-radius: 12px;
+    margin-block: 24px;
   }
 }
