--- a/src/components/Prose.module.scss
+++ b/src/components/Prose.module.scss
@@ -6,7 +6,7 @@
   }
 
   h2 {
-    font-size: 1.5rem;
+    font-size: 24px;
     font-weight: 700;
     letter-spacing: -0.022em;
     margin-block: 24px 0;
@@ -20,12 +20,13 @@
   blockquote {
     border-left: 4px solid var(--accent);
     margin: 0;
-    padding-left: 1rem;
+    padding-left: 16px;
     font-weight: 500;
     font-style: italic;
   }
 
   img {
+    display: block;
     border-radius: 12px;
     margin-block: 24px;
   }
