--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,6 +6,8 @@
   --text-secondary: #999;
   --link-color: #0044ff;
   --accent: #ddd;
+  --warning-background: rgba(255, 166, 0, 0.192);
+  --on-warning: #a06800;
   --page-gutter: 24px;
 
   @media (prefers-color-scheme: dark) {
@@ -14,6 +16,9 @@
     --link-color: #2a63ff;
     --text-primary: #fff;
     --text-secondary: #999;
+
+    --warning-background: rgba(255, 191, 72, 0.274);
+    --on-warning: orange;
   }
 }
 
