--- a/src/components/Prose.module.scss
+++ b/src/components/Prose.module.scss
@@ -30,4 +30,11 @@
     border-radius: 12px;
     margin-block: 24px;
   }
+
+  > pre {
+    border: 1px solid var(--accent);
+    border-radius: 6px;
+    padding: 12px;
+    font-size: 0.8em;
+  }
 }
