--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -42,6 +42,10 @@ code {
   word-break: break-word;
 }
 
+pre {
+  margin: 0;
+}
+
 :not(pre) > code {
   border: 1px solid var(--accent);
   padding: 0.2em 0.4em;
