--- a/src/components/Prose.module.scss
+++ b/src/components/Prose.module.scss
@@ -8,8 +8,13 @@
   h2 {
     font-size: 24px;
     font-weight: 700;
-    letter-spacing: -0.022em;
-    margin-block: 24px 0;
+    margin-block: 24px 12px;
+  }
+
+  h3 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-block: 24px 12px;
   }
 
   a {
