--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -7,12 +7,15 @@
   min-height: 100vh;
 
   footer {
-    color: var(--text-secondary);
+    font-size: 16px;
+    font-weight: 500;
     margin-top: 32px;
-    font-size: 11px;
-    font-weight: 700;
-    margin-bottom: 24px;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
+    padding-block: 32px;
+    border-top: 1px solid var(--accent);
+
+    &::before {
+      content: "// ";
+      color: var(--text-secondary);
+    }
   }
 }
