--- a/src/components/Prose.module.scss
+++ b/src/components/Prose.module.scss
@@ -13,7 +13,7 @@
 
   h3 {
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 500;
     margin-block: 24px 12px;
   }
 
@@ -50,6 +50,10 @@
     th {
       font-weight: 700;
     }
+  }
+
+  ul li::marker {
+    color: var(--accent);
   }
 }
 
