--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,6 +8,7 @@
   --text-secondary: #555;
   --link-color: #0044ff;
   --nav-hover: #eee;
+  --skeleton: #eee;
 
   --warning-background: rgba(255, 166, 0, 0.192);
   --on-warning: #a06800;
@@ -22,6 +23,7 @@
     --text-secondary: #999;
     --link-color: #2a63ff;
     --nav-hover: #222;
+    --skeleton: #333;
 
     --warning-background: rgba(255, 191, 72, 0.274);
     --on-warning: orange;
